// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getHakuByFormValues returns correct haku given different hakulomake variations 1`] = `
{
  "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
  "ajastettuJulkaisu": "2019-11-16T08:44",
  "externalId": "ext1",
  "hakuajat": [
    {
      "alkaa": "2019-04-16T08:44",
      "paattyy": "2019-04-18T08:44",
    },
    {
      "alkaa": "2019-06-16T08:44",
      "paattyy": "2019-06-18T08:44",
    },
  ],
  "hakukohteenLiittamisenTakaraja": "2019-09-16T08:44",
  "hakukohteenMuokkaamisenTakaraja": "2019-10-16T08:44",
  "hakulomakeAtaruId": null,
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {
    "fi": "https://google.fi",
  },
  "hakulomaketyyppi": "muu",
  "hakutapaKoodiUri": "hakutapa_1#1",
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_12",
  "kohdejoukonTarkenneKoodiUri": "tarkenne_1#1",
  "metadata": {
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "alkamiskausi ja -vuosi",
      "henkilokohtaisenSuunnitelmanLisatiedot": {},
      "koulutuksenAlkamiskausiKoodiUri": "alkamiskausi_1#1",
      "koulutuksenAlkamispaivamaara": null,
      "koulutuksenAlkamisvuosi": 2020,
      "koulutuksenPaattymispaivamaara": null,
    },
    "tulevaisuudenAikataulu": [
      {
        "alkaa": "2019-08-16T08:44",
        "paattyy": "2019-08-18T08:44",
      },
      {
        "alkaa": "2019-09-16T08:44",
        "paattyy": "2019-09-18T08:44",
      },
    ],
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero",
          "sv": "Sv puhelinnumero",
        },
        "sahkoposti": {
          "fi": "Fi sähköposti",
          "sv": "Sv sähköposti",
        },
        "titteli": {
          "fi": "Fi titteli",
          "sv": "Sv titteli",
        },
        "wwwSivu": {
          "fi": "Fi verkkosivu",
          "sv": "Sv verkkosivu",
        },
        "wwwSivuTeksti": {},
      },
    ],
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Nimi",
    "sv": "Namn",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
}
`;

exports[`getHakuByFormValues returns correct haku given different hakulomake variations 2`] = `
{
  "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
  "ajastettuJulkaisu": "2019-11-16T08:44",
  "externalId": "ext1",
  "hakuajat": [
    {
      "alkaa": "2019-04-16T08:44",
      "paattyy": "2019-04-18T08:44",
    },
    {
      "alkaa": "2019-06-16T08:44",
      "paattyy": "2019-06-18T08:44",
    },
  ],
  "hakukohteenLiittamisenTakaraja": "2019-09-16T08:44",
  "hakukohteenMuokkaamisenTakaraja": "2019-10-16T08:44",
  "hakulomakeAtaruId": null,
  "hakulomakeKuvaus": {
    "fi": "<p>kuvaus</p>",
  },
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ei sähköistä",
  "hakutapaKoodiUri": "hakutapa_1#1",
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_12",
  "kohdejoukonTarkenneKoodiUri": "tarkenne_1#1",
  "metadata": {
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "alkamiskausi ja -vuosi",
      "henkilokohtaisenSuunnitelmanLisatiedot": {},
      "koulutuksenAlkamiskausiKoodiUri": "alkamiskausi_1#1",
      "koulutuksenAlkamispaivamaara": null,
      "koulutuksenAlkamisvuosi": 2020,
      "koulutuksenPaattymispaivamaara": null,
    },
    "tulevaisuudenAikataulu": [
      {
        "alkaa": "2019-08-16T08:44",
        "paattyy": "2019-08-18T08:44",
      },
      {
        "alkaa": "2019-09-16T08:44",
        "paattyy": "2019-09-18T08:44",
      },
    ],
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero",
          "sv": "Sv puhelinnumero",
        },
        "sahkoposti": {
          "fi": "Fi sähköposti",
          "sv": "Sv sähköposti",
        },
        "titteli": {
          "fi": "Fi titteli",
          "sv": "Sv titteli",
        },
        "wwwSivu": {
          "fi": "Fi verkkosivu",
          "sv": "Sv verkkosivu",
        },
        "wwwSivuTeksti": {},
      },
    ],
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Nimi",
    "sv": "Namn",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
}
`;

exports[`getHakuByFormValues returns correct haku given form values 1`] = `
{
  "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
  "ajastettuJulkaisu": "2019-11-16T08:44",
  "externalId": "ext1",
  "hakuajat": [
    {
      "alkaa": "2019-04-16T08:44",
      "paattyy": "2019-04-18T08:44",
    },
    {
      "alkaa": "2019-06-16T08:44",
      "paattyy": "2019-06-18T08:44",
    },
  ],
  "hakukohteenLiittamisenTakaraja": "2019-09-16T08:44",
  "hakukohteenMuokkaamisenTakaraja": "2019-10-16T08:44",
  "hakulomakeAtaruId": "12345",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "hakutapaKoodiUri": "hakutapa_1#1",
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_12",
  "kohdejoukonTarkenneKoodiUri": "tarkenne_1#1",
  "metadata": {
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "alkamiskausi ja -vuosi",
      "henkilokohtaisenSuunnitelmanLisatiedot": {},
      "koulutuksenAlkamiskausiKoodiUri": "alkamiskausi_1#1",
      "koulutuksenAlkamispaivamaara": null,
      "koulutuksenAlkamisvuosi": 2020,
      "koulutuksenPaattymispaivamaara": null,
    },
    "tulevaisuudenAikataulu": [
      {
        "alkaa": "2019-08-16T08:44",
        "paattyy": "2019-08-18T08:44",
      },
      {
        "alkaa": "2019-09-16T08:44",
        "paattyy": "2019-09-18T08:44",
      },
    ],
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero",
          "sv": "Sv puhelinnumero",
        },
        "sahkoposti": {
          "fi": "Fi sähköposti",
          "sv": "Sv sähköposti",
        },
        "titteli": {
          "fi": "Fi titteli",
          "sv": "Sv titteli",
        },
        "wwwSivu": {
          "fi": "Fi verkkosivu",
          "sv": "Sv verkkosivu",
        },
        "wwwSivuTeksti": {},
      },
    ],
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Nimi",
    "sv": "Namn",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
}
`;

exports[`getHakuByFormValues toteutuksen ajankohta - Aloitus henkilokohtaisen suunnitelman mukaisesti 1`] = `
{
  "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
  "ajastettuJulkaisu": "2019-11-16T08:44",
  "externalId": "ext1",
  "hakuajat": [
    {
      "alkaa": "2019-04-16T08:44",
      "paattyy": "2019-04-18T08:44",
    },
    {
      "alkaa": "2019-06-16T08:44",
      "paattyy": "2019-06-18T08:44",
    },
  ],
  "hakukohteenLiittamisenTakaraja": "2019-09-16T08:44",
  "hakukohteenMuokkaamisenTakaraja": "2019-10-16T08:44",
  "hakulomakeAtaruId": "12345",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "hakutapaKoodiUri": "hakutapa_1#1",
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_12",
  "kohdejoukonTarkenneKoodiUri": "tarkenne_1#1",
  "metadata": {
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "henkilokohtainen suunnitelma",
      "henkilokohtaisenSuunnitelmanLisatiedot": {
        "fi": "<p>hlokoht fi </p>",
        "sv": "<p>hlokoht sv </p>",
      },
      "koulutuksenAlkamiskausiKoodiUri": "alkamiskausi_1#1",
      "koulutuksenAlkamispaivamaara": null,
      "koulutuksenAlkamisvuosi": 2020,
      "koulutuksenPaattymispaivamaara": null,
    },
    "tulevaisuudenAikataulu": [
      {
        "alkaa": "2019-08-16T08:44",
        "paattyy": "2019-08-18T08:44",
      },
      {
        "alkaa": "2019-09-16T08:44",
        "paattyy": "2019-09-18T08:44",
      },
    ],
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero",
          "sv": "Sv puhelinnumero",
        },
        "sahkoposti": {
          "fi": "Fi sähköposti",
          "sv": "Sv sähköposti",
        },
        "titteli": {
          "fi": "Fi titteli",
          "sv": "Sv titteli",
        },
        "wwwSivu": {
          "fi": "Fi verkkosivu",
          "sv": "Sv verkkosivu",
        },
        "wwwSivuTeksti": {},
      },
    ],
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Nimi",
    "sv": "Namn",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
}
`;

exports[`getHakuByFormValues toteutuksen ajankohta - Tarkka alkamisaika 1`] = `
{
  "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
  "ajastettuJulkaisu": "2019-11-16T08:44",
  "externalId": "ext1",
  "hakuajat": [
    {
      "alkaa": "2019-04-16T08:44",
      "paattyy": "2019-04-18T08:44",
    },
    {
      "alkaa": "2019-06-16T08:44",
      "paattyy": "2019-06-18T08:44",
    },
  ],
  "hakukohteenLiittamisenTakaraja": "2019-09-16T08:44",
  "hakukohteenMuokkaamisenTakaraja": "2019-10-16T08:44",
  "hakulomakeAtaruId": "12345",
  "hakulomakeKuvaus": {},
  "hakulomakeLinkki": {},
  "hakulomaketyyppi": "ataru",
  "hakutapaKoodiUri": "hakutapa_1#1",
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "kohdejoukkoKoodiUri": "haunkohdejoukko_12",
  "kohdejoukonTarkenneKoodiUri": "tarkenne_1#1",
  "metadata": {
    "koulutuksenAlkamiskausi": {
      "alkamiskausityyppi": "tarkka alkamisajankohta",
      "henkilokohtaisenSuunnitelmanLisatiedot": {},
      "koulutuksenAlkamiskausiKoodiUri": "alkamiskausi_1#1",
      "koulutuksenAlkamispaivamaara": "2019-09-16T08:44",
      "koulutuksenAlkamisvuosi": 2020,
      "koulutuksenPaattymispaivamaara": "2019-09-16T08:44",
    },
    "tulevaisuudenAikataulu": [
      {
        "alkaa": "2019-08-16T08:44",
        "paattyy": "2019-08-18T08:44",
      },
      {
        "alkaa": "2019-09-16T08:44",
        "paattyy": "2019-09-18T08:44",
      },
    ],
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero",
          "sv": "Sv puhelinnumero",
        },
        "sahkoposti": {
          "fi": "Fi sähköposti",
          "sv": "Sv sähköposti",
        },
        "titteli": {
          "fi": "Fi titteli",
          "sv": "Sv titteli",
        },
        "wwwSivu": {
          "fi": "Fi verkkosivu",
          "sv": "Sv verkkosivu",
        },
        "wwwSivuTeksti": {},
      },
    ],
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Nimi",
    "sv": "Namn",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
}
`;
